# pg-mcp

./: .env  CLAUDE.md  README.md  pyproject.toml
fixtures/: Makefile  docker-compose.yml  test.md  verification-report.md  verify.sql
fixtures/large/: setup.sql
fixtures/medium/: setup.sql
fixtures/small/: setup.sql
pg_mcp/: config.py  server.py
pg_mcp/db/: executor.py  registry.py  schema_cache.py  schema_introspect.py  schema_retriever.py
pg_mcp/llm/: client.py  prompts.py
pg_mcp/models/: llm.py  schema.py
pg_mcp/services/: query_service.py
pg_mcp/sql/: safety.py
tests/: test_sql_safety.py
