[project]
name = "pg-mcp"
version = "0.1.0"
description = "PostgreSQL MCP server with natural language query capabilities"
authors = [{ name = "Cascade", email = "cascade@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.1",
    "asyncpg>=0.31.0",
    "sqlglot>=28.5.0",
    "pydantic-settings>=2.12.0",
    "openai>=2.14.0",
    "pydantic>=2.12.0"
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0"
]

[project.scripts]
pg-mcp = "pg_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
